# mylly-editor

./: .gitignore  CMakeLists.txt  README.md  colourpicker.cpp  colourpicker.h  editor.cpp  editor.h  editordefs.h  editorwindow.h  menubar.cpp  menubar.h  particleeditor.cpp  particleeditor.h  resourcewriter.cpp  resourcewriter.h  sidebar.cpp  sidebar.h  spriteeditor.cpp  spriteeditor.h  spriteselector.cpp  spriteselector.h
resources/: credits.txt
resources/fonts/: fonts.txt
resources/textures/: ui-white.sprite
